--- a/css/anim.css
+++ b/css/anim.css
@@ -118,3 +118,70 @@ img {
   padding: 10px;
   font-size: 24px;
 }
+
+#searchlist {transform: translateX(300px);}
+.list-group .list-group-item .image{
+  float: left;
+  width: 40px;
+  height: 40px;
+  border-radius: 70px;
+  text-align: center;
+  line-height: 40px;
+  background-color: #581df8;
+  color: #fff;
+  font-size: 13px;
+}
+.list-group .list-group-item .details{
+  float: left;
+  width: calc(100% - 100px);
+  color: rgb(53, 49, 49);
+  font-size: 17px;
+}
+.list-group .list-group-item .fees {
+  width: 60px;
+  float: left;
+  font-size: 14px;
+}
+
+.list-group .list-group-item .fees button {
+  font-size: 12px;
+}
+.dDash {
+  position: absolute; top:0;
+  left: 0; width: 100%; height: 100%;
+  left:300px;
+  background-color: #fff;
+}
+
+.presform {
+  margin-top:2rem;
+}
+.presform .medname {
+  width: calc(100% - 160px);
+  border: 1px solid #ababab;
+}
+
+.presform .radname {
+  display: none;
+}
+.presform .radname + label {
+  padding: 3px; 
+  color:#fff;
+  background-color: rgb(92, 88, 88);
+}
+
+.presform .radname:checked + label{
+  background-color: green;
+}
+.number {
+  width: 30px;
+  border: 1px solid #ababab;
+}
+
+#payment {
+  width: 60px;
+  height: 30px;
+  opacity:0;
+  z-index: -1;
+  transition: top 0.8s ease, opacity 0.8s ease;
+}
